--- a/biostack/biostack.vbproj
+++ b/biostack/biostack.vbproj
@@ -136,6 +136,10 @@
       <Project>{d6e1fcbb-69b4-43d3-9289-a987a140a435}</Project>
       <Name>SMRUCC.WebCloud.d3js</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\GCModeller\src\runtime\httpd\WebCloud\SMRUCC.WebCloud.DataCenter\SMRUCC.WebCloud.DataCenter.vbproj">
+      <Project>{b1de5562-91d6-4aee-aa26-72ef2dfc7c75}</Project>
+      <Name>SMRUCC.WebCloud.DataCenter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\GCModeller\src\runtime\sciBASIC#\Data\DataFrame\+VB_DataFrame.vbproj">
       <Project>{7283c179-f852-4ead-8d8f-b82ef2cbd7db}</Project>
       <Name>+VB_DataFrame</Name>
