write database and database extensions

--- a/biostack/biostack.vbproj
+++ b/biostack/biostack.vbproj
@@ -73,6 +73,7 @@
     <Compile Include="BiostackApp.vb" />
     <Compile Include="KEGG.vb" />
     <Compile Include="Debugger.vb" />
+    <Compile Include="DataExtensions.vb" />
     <Compile Include="Platform.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
