--- a/biostack/biostack.vbproj
+++ b/biostack/biostack.vbproj
@@ -95,7 +95,7 @@
     <Compile Include="BiostackApp.vb" />
     <Compile Include="KEGG.vb" />
     <Compile Include="Debugger.vb" />
-    <Compile Include="DataExtensions.vb" />
+    <Compile Include="Apps.vb" />
     <Compile Include="Platform.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
