--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,4 @@ _Pvt_Extensions
 /vs_solutions/raw
 CellRender.zip
 test/.cache/b1/7bb1e80367bbdd7c5d039379553f441e.txt
+test/biocad/motif_graph.csv
