--- a/.gitignore
+++ b/.gitignore
@@ -249,3 +249,4 @@ _Pvt_Extensions
 CellRender.zip
 test/.cache/b1/7bb1e80367bbdd7c5d039379553f441e.txt
 test/biocad/motif_graph.csv
+test/biocad/UMAP3d.zip
