--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,4 @@ test/.cache/b1/7bb1e80367bbdd7c5d039379553f441e.txt
 test/biocad/motif_graph.csv
 test/biocad/UMAP3d.zip
 *.zip
+imports/reactions/cad_registry_reaction_node.sql
