--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,4 @@ test/biocad/UMAP3d.zip
 *.zip
 imports/reactions/cad_registry_reaction_node.sql
 imports/reactions/cad_registry_subcellular_compartments.sql
+imports/reactions/cad_registry_subcellular_locations.sql
