--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,4 @@ test/biocad/UMAP3d.zip
 imports/reactions/cad_registry_reaction_node.sql
 imports/reactions/cad_registry_subcellular_compartments.sql
 imports/reactions/cad_registry_subcellular_locations.sql
+imports/reactions/cad_registry_reaction_graph.sql
