add molecules data

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ imports/reactions/cad_registry_reaction_node.sql
 imports/reactions/cad_registry_subcellular_compartments.sql
 imports/reactions/cad_registry_subcellular_locations.sql
 imports/reactions/cad_registry_reaction_graph.sql
+imports/reactions/cad_registry_molecules.sql
