--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ imports/reactions/cad_registry_subcellular_locations.sql
 imports/reactions/cad_registry_reaction_graph.sql
 imports/reactions/cad_registry_molecules.sql
 imports/reactions/cad_registry_pathway.sql
+imports/reactions/cad_registry_complex.sql
