--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ imports/reactions/cad_registry_reaction_graph.sql
 imports/reactions/cad_registry_molecules.sql
 imports/reactions/cad_registry_pathway.sql
 imports/reactions/cad_registry_complex.sql
+imports/reactions/cad_registry_dblinks.sql
