--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ imports/reactions/cad_registry_molecules.sql
 imports/reactions/cad_registry_pathway.sql
 imports/reactions/cad_registry_complex.sql
 imports/reactions/cad_registry_dblinks.sql
+test/uniprotkb_taxonomy_id_2_AND_model_organ_2024_08_02.xml
