--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,4 @@ test/obsolete/imports/reactions/cad_registry_reaction_graph.sql
 test/obsolete/imports/reactions/cad_registry_reaction_node.sql
 test/obsolete/imports/reactions/cad_registry_subcellular_compartments.sql
 test/obsolete/imports/reactions/cad_registry_subcellular_locations.sql
+test/chebi.obo
