--- a/src/biocad_registry.vbproj
+++ b/src/biocad_registry.vbproj
@@ -10,6 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="RegistryTool\**" />
+    <EmbeddedResource Remove="RegistryTool\**" />
+    <None Remove="RegistryTool\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\GCModeller\src\R-sharp\R#\Rsharp-netcore5.vbproj" />
     <ProjectReference Include="..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
     <ProjectReference Include="..\..\graphQL\src\mysqli\LibMySQL\LibMySQL.vbproj" />
