--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,4 @@ test/obsolete/imports/reactions/cad_registry_reaction_node.sql
 test/obsolete/imports/reactions/cad_registry_subcellular_compartments.sql
 test/obsolete/imports/reactions/cad_registry_subcellular_locations.sql
 test/chebi.obo
+test/export_test/km.csv
