--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,5 @@ test/obsolete/imports/reactions/cad_registry_subcellular_locations.sql
 test/chebi.obo
 test/export_test/km.csv
 mysql/cad_registry.mwb.bak
+.kegg/show_organism/__404.txt
+.kegg/show_organism/xcc.html
