test repository success

--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,4 @@ test/export_test/km.csv
 mysql/cad_registry.mwb.bak
 .kegg/show_organism/__404.txt
 .kegg/show_organism/xcc.html
+workspace/.kegg/show_organism/xcc.html
