test download success

--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,5 @@ mysql/cad_registry.mwb.bak
 .kegg/show_organism/__404.txt
 .kegg/show_organism/xcc.html
 workspace/.kegg/show_organism/xcc.html
+workspace/.kegg/show_organism/xcb.html
+workspace/.kegg/show_organism/hsa.html
