fetch genome information

--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,9 @@ mysql/cad_registry.mwb.bak
 workspace/.kegg/show_organism/xcc.html
 workspace/.kegg/show_organism/xcb.html
 workspace/.kegg/show_organism/hsa.html
+workspace/.kegg/show_organism/ecj.html
+workspace/.kegg/show_organism/ecd.html
+workspace/.kegg/show_organism/ebw.html
+workspace/.kegg/show_organism/eco.html
+
+workspace/.kegg/
