--- a/src/RegistryTool/RegistryTool.vbproj
+++ b/src/RegistryTool/RegistryTool.vbproj
@@ -67,7 +67,7 @@
     <ProjectReference Include="..\..\..\mzkit\src\metadb\Massbank\massbank.NET5.vbproj" />
     <ProjectReference Include="..\..\..\mzkit\src\metadb\XrefEngine\XrefEngine.NET5.vbproj" />
     <ProjectReference Include="..\..\..\mzkit\src\mzmath\MSEngine\MSEngine.vbproj" />
-    <ProjectReference Include="..\biocad_registry.vbproj" />
+    <ProjectReference Include="..\biocad_storage\biocad_storage.vbproj" />
   </ItemGroup>
 
   <ItemGroup>
