--- a/src/fixTool/fixTool.vbproj
+++ b/src/fixTool/fixTool.vbproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
     <ProjectReference Include="..\..\..\graphQL\src\mysqli\LibMySQL\LibMySQL.vbproj" />
-    <ProjectReference Include="..\biocad_registry.vbproj" />
+    <ProjectReference Include="..\biocad_storage\biocad_storage.vbproj" />
   </ItemGroup>
 
 </Project>
