enzyme embedding success

--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,4 @@ workspace/.kegg/
 test/biocad/taxonomy/Bacillales_genomics.fasta
 workspace/embedding/nt_fingerprints.csv
 workspace/embedding/nt_embedding.csv
+workspace/embedding/enzyme_embedding.csv
