--- a/src/biocad_storage/biocad_storage.vbproj
+++ b/src/biocad_storage/biocad_storage.vbproj
@@ -32,4 +32,6 @@
     <ProjectReference Include="..\..\..\mzkit\src\mzmath\ms2_math-core\mzmath-netcore5.vbproj" />
   </ItemGroup>
 
+  <Import Project="mysql\mysql_registry.projitems" Label="Shared" />
+
 </Project>
