--- a/src/RegistryTool/RegistryTool.vbproj
+++ b/src/RegistryTool/RegistryTool.vbproj
@@ -67,6 +67,7 @@
     <ProjectReference Include="..\..\..\GCModeller\src\R-sharp\R#\Rsharp-netcore5.vbproj" />
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
     <ProjectReference Include="..\..\..\graphQL\src\mysqli\LibMySQL\LibMySQL.vbproj" />
+    <ProjectReference Include="..\..\..\LLMs\src\Ollama\Ollama.vbproj" />
     <ProjectReference Include="..\..\..\mzkit\src\metadb\Chemoinformatics\chemoinformatics-netcore5.vbproj" />
     <ProjectReference Include="..\..\..\mzkit\src\metadb\Massbank\massbank.NET5.vbproj" />
     <ProjectReference Include="..\..\..\mzkit\src\metadb\XrefEngine\XrefEngine.NET5.vbproj" />
