make bugs fixed the seql query for export enzyme protein sequence

--- a/.gitignore
+++ b/.gitignore
@@ -293,3 +293,4 @@ workspace/embedding/enzyme_embedding.csv
 data/chebi.obo
 data/chebi_lite.obo
 scripts/metadata.dat
+/workspace/transformer/enzymes.fasta
