--- a/src/registry_data/registry_data.vbproj
+++ b/src/registry_data/registry_data.vbproj
@@ -100,6 +100,8 @@
     <ProjectReference Include="..\..\..\mzkit\src\mzmath\ms2_math-core\mzmath-netcore5.vbproj" />
   </ItemGroup>
 
+  <Import Project="mysql\mysql_registry.projitems" Label="Shared" />
+
   
 
 </Project>
