fix of the missing component reference

--- a/src/RegistryTool/RegistryTool.vbproj
+++ b/src/RegistryTool/RegistryTool.vbproj
@@ -67,6 +67,7 @@
     <ProjectReference Include="..\..\..\galaxy\src\dockpanelsuite\Themes\ThemeVS2015.vbproj" />
     <ProjectReference Include="..\..\..\galaxy\src\dockpanelsuite\VSDockPanel\VSDockPanel.vbproj" />
     <ProjectReference Include="..\..\..\galaxy\src\GalaxyWorkbench\GalaxyWorkbench.vbproj" />
+    <ProjectReference Include="..\..\..\GCModeller\src\GCModeller\analysis\ProteinTools\ProteinMatrix\ProteinMatrix.vbproj" />
     <ProjectReference Include="..\..\..\GCModeller\src\GCModeller\core\Bio.Assembly\biocore-netcore5.vbproj" />
     <ProjectReference Include="..\..\..\GCModeller\src\R-sharp\R#\Rsharp-netcore5.vbproj" />
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
@@ -77,7 +78,7 @@
     <ProjectReference Include="..\..\..\mzkit\src\metadb\Massbank\massbank.NET5.vbproj" />
     <ProjectReference Include="..\..\..\mzkit\src\metadb\XrefEngine\XrefEngine.NET5.vbproj" />
     <ProjectReference Include="..\..\..\mzkit\src\mzmath\MSEngine\MSEngine.vbproj" />
-    <ProjectReference Include="..\biocad_storage\biocad_storage.vbproj" />
+    <ProjectReference Include="..\registry_data\registry_data.vbproj" />
   </ItemGroup>
 
   <ItemGroup>
