try to save the motif sites

--- a/src/biocad_registry/biocad_registry.vbproj
+++ b/src/biocad_registry/biocad_registry.vbproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="../..\..\mzkit\src\metadb\Massbank\massbank.NET5.vbproj" />
     <ProjectReference Include="../..\..\mzkit\src\metadb\SMILES\SMILES.NET5.vbproj" />
     <ProjectReference Include="../..\..\mzkit\src\mzmath\ms2_math-core\mzmath-netcore5.vbproj" />
+    <ProjectReference Include="..\..\..\GCModeller\src\GCModeller\data\RegulonDatabase\RegulonDatabase.NET5.vbproj" />
     <ProjectReference Include="..\registry_data\registry_data.vbproj" />
   </ItemGroup>
 
